day-17/03-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: segunda-policy
  namespace: giropops
spec:
  podSelector: {} #todos
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: giropops
    - namespaceSelector: # leia-se OU, pois tem o - no começo da linha
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
