day-17/04-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: segunda-policy
  namespace: giropops
spec:
  podSelector: {} #todos
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: In
            values: ["ingress-nginx", "giropops"]
