day-17/05-bloqueia-ingress-todo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: giropops
spec:
  podSelector: {} #todos
  policyTypes:
  - Ingress
  - Egress

#essa regra bloqueia tudo
