day-17/06-libera-entre-redis-e-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-app-only
  namespace: giropops
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: giropops-senhas
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: giropops

# IMPORTANTE: a condição acima diz que precisa do app:giropops-senhas E kubernetes.io/metadata.name: giropops, pois está sem o traço (-);
