day-17/10-bloqueando-redes.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bloqueando-redes
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.18.0.0/16
        except:
        - 172.18.0.111/32
